--- a/less/breadcrumbs.less
+++ b/less/breadcrumbs.less
@@ -1,11 +1,16 @@
 //
 // Breadcrumbs
 // --------------------------------------------------
-
-.breadcrumb {
+.breadcrumbs {
   display: none;
-  @media (min-width: @screen-sm-min) {
+}
+@media (min-width: @screen-sm) {
+  .breadcrumbs {
     display: block;
+  }
+}
+.breadcrumb {
+  @media (min-width: @screen-sm-min) {
     padding: 0 @breadcrumb-padding-horizontal @breadcrumb-padding-horizontal 0;
     margin-bottom: @margin0;
     list-style: none;
