--- a/less/ku-misc.less
+++ b/less/ku-misc.less
@@ -38,7 +38,9 @@ nav {
 
 .main-content {
   padding-top: @grid-gutter-height;
-  padding-bottom: @grid-gutter-height;
+  @media (max-width: @screen-sm-min) {
+    padding-bottom: @grid-gutter-height;
+  }
 
   .front-page & {
     padding-top: 0;
@@ -46,9 +48,7 @@ nav {
 
   .row {
     > [class*="col-"] {
-      &:not(.form-group) {
-        margin-bottom: @grid-gutter-height;
-      }
+      margin-bottom: @grid-gutter-height;
     }
   }
 }
@@ -73,6 +73,7 @@ nav {
 .right-side {
   .pull-right;
 }
+// KU grid:
 
 .gcitem + .gcitem {
   margin-top: @grid-gutter-height;
