--- a/docs/_includes/global-footer.html
+++ b/docs/_includes/global-footer.html
@@ -9,7 +9,7 @@
           <h3 data-heading="toggle" class="footer-heading visible-desktop hidden-xs">Københavns Universitet</h3>
           <h3 data-heading="toggle" class="footer-heading visible-mobil visible-xs-block hidden-sm">Organisation</h3>
           <ul class="footerlinks" role="menu">
-            <li role="menuitem"><a href="http://velkommen.ku.dk/organisation/ledelse">Ledelse</a></li>
+            <li role="menuitem"><a href="http://velkommen.ku.dk/ledelse-strategi/">Ledelse</a></li>
             <li role="menuitem"><a href="http://velkommen.ku.dk/organisation/administration">Administration</a></li>
             <li role="menuitem"><a href="http://velkommen.ku.dk/organisation/fakulteter">Fakulteter</a></li>
             <li role="menuitem"><a href="http://velkommen.ku.dk/organisation/institutter">Institutter</a></li>
