--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -48,7 +48,7 @@
 }
 // Nyhedsliste - midterkolonne:
 
-#nyhedsliste {
+.nyhedsliste {
   &.smal {
     .media {
       .media-heading {
@@ -69,7 +69,7 @@
 }
 // Nyhedsliste - højrekolonne
 
-#nyhedsliste-rightbox {
+.nyhedsliste-rightbox {
   .media {
     .news-date2 {
       font-size: 12px;
