Search page template

--- a/less/ku-media.less
+++ b/less/ku-media.less
@@ -8,3 +8,16 @@
     }
   }
 }
+// Custom sesrch pages
+
+.custom-search-results {
+  .media-heading {
+    display: inline-block;
+    max-width: 84%;
+  }
+
+  .nyhedsliste_dato {
+    .pull-right;
+    font-weight: 600;
+  }
+}
