--- a/docs/_includes/ku-leftmenu.html
+++ b/docs/_includes/ku-leftmenu.html
@@ -9,7 +9,8 @@
         <ul>
           <li><a href="../ku-default/">Template with left menu</a></li>
           <li><a href="../ku-right-sidebar/">Template with left menu and right sidebar</a></li>
-          <li><a href="../ku-ical-icon/">Template with left menu and iCal iconr</a></li>
+          <li><a href="../ku-searchpage/">Template with seaarch content</a></li>
+          <li><a href="../ku-ical-icon/">Template with left menu and iCal icon</a></li>
         </ul>
       </li>
       <li><a href="#">Special KU plug-ins</a>
