--- a/less/ku-misc.less
+++ b/less/ku-misc.less
@@ -47,11 +47,15 @@ nav {
   }
 
   .row {
-    > [class*="col-"] {
-      margin-bottom: @grid-gutter-height;
+    // > [class*="col-"] {
+    //   margin-bottom: @grid-gutter-height;
+    // }
+    + .row {
+      margin-top: @grid-gutter-height;
     }
   }
 }
+
 #gridsidebar {
   .row {
     > [class*="col-"] {
@@ -59,6 +63,7 @@ nav {
     }
   }
 }
+
 .main-area {
   flex-grow: 1;
   @media (max-width: @screen-sm-min) {
@@ -97,6 +102,12 @@ nav {
   margin: @margin10 0;
   &:extend(.clearfix all);
 }
+
+.spacer {
+  height: @margin20;
+  clear: both;
+  &:extend(.clearfix all);
+}
 // Accessibility
 
 [tabindex] {
@@ -107,6 +118,17 @@ nav {
 .page-icons {
   display: none;
 }
+// For custom search pages
+
+.custom-search {
+  width: 400px;
+  padding: 15px 0;
+
+  > .row {
+    margin: 0;
+  }
+}
+
 @media (min-width: @screen-sm) {
   // Utility icon
   .page-icons {
@@ -168,6 +190,12 @@ nav {
         }
       }
     }
+  }
+}
+@media (max-width: @screen-sm-max) {
+  // Margin top for mobile and tablets
+  .mobile-margin-top-10 {
+    margin-top: @margin10;
   }
 }
 @media (max-width: @screen-sm) {
