--- a/less/ku-media.less
+++ b/less/ku-media.less
@@ -11,13 +11,12 @@
 // Custom sesrch pages
 
 .custom-search-results {
-  .media-heading {
-    display: inline-block;
-    max-width: 84%;
-  }
+  // .media-heading {
+  //   display: inline-block;
+  //   max-width: 84%;
+  // }
 
   .nyhedsliste_dato {
-    .pull-right;
-    font-weight: 600;
+    color: @text-color!important;
   }
 }
