--- a/docs/_includes/css/type.html
+++ b/docs/_includes/css/type.html
@@ -305,7 +305,7 @@ You can use the mark tag to <mark>highlight</mark> text.
 </blockquote>
 {% endhighlight %}
 
-  <h4>Alternate displays</h4>
+  <!-- <h4>Alternate displays</h4>
   <p>Add <code>.blockquote-reverse</code> for a blockquote with right-aligned content.</p>
   <div class="bs-example" style="overflow: hidden;" data-example-id="blockquote-reverse">
     <blockquote class="blockquote-reverse">
@@ -317,7 +317,7 @@ You can use the mark tag to <mark>highlight</mark> text.
 <blockquote class="blockquote-reverse">
   ...
 </blockquote>
-{% endhighlight %}
+{% endhighlight %} -->
 
 
   <!-- Lists -->
