--- a/less/variables.less
+++ b/less/variables.less
@@ -128,7 +128,7 @@
 @ku-entry-end:          #edece9;
 @ku-entry-border:       #e8e8e8;
 
-@brand-primary:         darken(#7ea5a8, 6.5%); // #337ab7
+@brand-primary:         darken(#7ea5a8, 6.5%);
 @brand-success:         #85ae33;
 @brand-info:            #7ea5a8;
 @brand-warning:         #e57002;
