--- a/docs/assets/css/src/docs.css
+++ b/docs/assets/css/src/docs.css
@@ -30,6 +30,7 @@
   top: 0;
   left: auto;
   z-index: 10;
+  max-width: 235px;
   height: 95%;
   margin-top: 15px;
   overflow-y: scroll;
@@ -857,12 +858,22 @@ h1[id] {
 
 .bs-example {
   position: relative;
+  float: none;
   padding: 45px 15px 15px;
   margin: 0 -15px 15px;
+  clear: both;
   border-color: #e5e5e5 #eee #eee;
   border-style: solid;
   border-width: 1px 0;
   box-shadow: inset 0 3px 6px rgba(0, 0, 0, .05);
+}
+.bs-example:before {
+  display: table;
+  content: " ";
+}
+
+[data-example-id*='blockquote'] {
+  overflow: hidden;
 }
 
 /* Echo out a label for the example */
@@ -871,6 +882,8 @@ h1[id] {
   position: absolute;
   top: 15px;
   left: 15px;
+  display: table;
+  clear: both;
   font-size: 12px;
   font-weight: bold;
   color: #959595;
@@ -886,7 +899,9 @@ h1[id] {
 /* Tweak display of the code snippets when following an example */
 
 .bs-example + .highlight, .bs-example + .zero-clipboard + .highlight {
+  float: none;
   margin: -15px -15px 15px;
+  clear: both;
   border-width: 0 0 1px;
   border-radius: 0;
 }
