--- a/less/type.less
+++ b/less/type.less
@@ -321,7 +321,7 @@ blockquote {
   float: right;
   position: relative;
   padding: (@line-height-computed / 2) @line-height-computed;
-  margin: 0 0 @line-height-computed;
+  margin:  10px 0 10px 10px;
   font-size: @blockquote-font-size;
   .icon-quote;
 
