--- a/less/type.less
+++ b/less/type.less
@@ -316,18 +316,18 @@ abbr[data-original-title] {
 blockquote {
   // KU:
   @media (min-width: @screen-sm-min) {
-    width: 48%;
+    width: 49%;
   }
   float: right;
   position: relative;
-  padding: (@line-height-computed / 2) @line-height-computed;
+  padding: (@line-height-computed / 2) 0 (@line-height-computed / 2) @line-height-computed;
   margin:  10px 0 10px 10px;
   font-size: @blockquote-font-size;
   .icon-quote;
 
   &:before {
     position: absolute;
-    top: -15px;
+    top: -12px;
     left: 0;
     font-size: 50px;
     color: @blockquote-icon-color;
