--- a/docs/_includes/js/tabs.html
+++ b/docs/_includes/js/tabs.html
@@ -1,10 +1,18 @@
 <div class="bs-docs-section">
+  <script>
+  $(function() {
+    $('#myTabs a').click(function (e) {
+      e.preventDefault();
+      $(this).tab('show');
+    });
+  })
+  </script>
   <h1 id="tabs" class="page-header">Togglable tabs <small>tab.js</small></h1>
 
   <h2 id="tabs-examples">Example tabs</h2>
   <p>Add quick, dynamic tab functionality to transition through panes of local content, even via dropdown menus. <strong>Nested tabs are not supported.</strong></p>
   <div class="bs-example bs-example-tabs" data-example-id="togglable-tabs">
-    <ul id="myTabs" class="nav nav-tabs" role="tablist">
+    <ul id="myTabs" class="nav nav-pills" role="tablist">
       <li role="presentation" class="active"><a href="#home" id="home-tab" role="tab" data-toggle="tab" aria-controls="home" aria-expanded="true">Home</a></li>
       <li role="presentation"><a href="#profile" role="tab" id="profile-tab" data-toggle="tab" aria-controls="profile">Profile</a></li>
       <li role="presentation" class="dropdown">
@@ -62,7 +70,7 @@ $('#myTabs li:eq(2) a').tab('show') // Select third tab (0-indexed)
 <div>
 
   <!-- Nav tabs -->
-  <ul class="nav nav-tabs" role="tablist">
+  <ul class="nav nav-pills" role="tablist">
     <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Home</a></li>
     <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Profile</a></li>
     <li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">Messages</a></li>
