--- a/docs/_includes/nav/ku-nav.html
+++ b/docs/_includes/nav/ku-nav.html
@@ -96,12 +96,12 @@
       </ul>
       <form class="navbar-form navbar-right search_form search_reset" role="search">
         <div class="input-group">
-          <input class="form-control" type="text" id="global_search_query" placeholder="Søg..." aria-label="Inputfelt til søgeord">
+          <input class="form-control global_search_query" type="text" placeholder="Søg..." aria-label="Inputfelt til søgeord">
           <div class="input-group-btn btn-global-search">
-            <button type="button" id="search" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Hele KU <span class="sr-only">Vis søgemuligheder</span></button>
-            <ul id="searchfilter" class="dropdown-menu dropdown-menu-right">
+            <button type="button" class="btn btn-default dropdown-toggle global-search-options-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Hele KU <span class="sr-only">Vis søgemuligheder</span></button>
+            <ul class="dropdown-menu dropdown-menu-right global-search-options-filter">
             </ul>
-            <button class="btn btn-default" name="sa" id="submit-button" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+            <button class="btn btn-default global-search-submit" name="sa" type="submit"><i class="glyphicon glyphicon-search"></i></button>
           </div>
         </div>
       </form>
