--- a/docs/_includes/nav/ku-nav.html
+++ b/docs/_includes/nav/ku-nav.html
@@ -94,7 +94,7 @@
           </ul>
         </li>
       </ul>
-      <form class="navbar-form navbar-right search_form search_reset" role="search">
+      <form class="navbar-form navbar-right search_form search_reset global-search" role="search">
         <div class="input-group">
           <input class="form-control global-search-query" type="text" placeholder="Søg..." aria-label="Inputfelt til søgeord">
           <div class="input-group-btn btn-global-search">
