--- a/docs/_includes/local-footer.html
+++ b/docs/_includes/local-footer.html
@@ -22,7 +22,7 @@
         {% else %}
         Kommunikation<br>
         <a href="mailto:kommunikation@adm.ku.dk">kommunikation@adm.ku.dk</a><br>
-        <abbr title="Tlf.">Tlf:</abbr> +45 35 32 42 61
+        <abbr title="Tlf.">Tlf:</abbr> <a href="tel:+45 35 32 42 61">+45 35 32 42 61</a>
         {% endif %}
       </address>
     </div>
