--- a/less/breadcrumbs.less
+++ b/less/breadcrumbs.less
@@ -14,7 +14,9 @@
 }
 
 .breadcrumb {
+  display: none;
   @media (min-width: @screen-sm-min) {
+    display: block;
     padding: 0 @breadcrumb-padding-horizontal @breadcrumb-padding-horizontal 0;
     margin-bottom: @margin0;
     list-style: none;
