--- a/docs/_includes/css/type.html
+++ b/docs/_includes/css/type.html
@@ -9,27 +9,27 @@
       <tbody>
         <tr>
           <td><h1>h1. Bootstrap heading</h1></td>
-          <td class="type-info">Normal 24px</td>
+          <td class="type-info"></td>
         </tr>
         <tr>
           <td><h2>h2. Bootstrap heading</h2></td>
-          <td class="type-info">Normal 19px</td>
+          <td class="type-info"></td>
         </tr>
         <tr>
           <td><h3>h3. Bootstrap heading</h3></td>
-          <td class="type-info">Semibold 15px</td>
+          <td class="type-info"></td>
         </tr>
         <tr>
           <td><h4>h4. Bootstrap heading</h4></td>
-          <td class="type-info">Semibold 14px</td>
+          <td class="type-info"></td>
         </tr>
         <tr>
           <td><h5>h5. Bootstrap heading</h5></td>
-          <td class="type-info">Semibold 13px</td>
+          <td class="type-info"></td>
         </tr>
         <tr>
           <td><h6>h6. Bootstrap heading</h6></td>
-          <td class="type-info">Bold 12px</td>
+          <td class="type-info"></td>
         </tr>
       </tbody>
     </table>
