--- a/docs/assets/css/doctypes/fullwidthfrontpage.css
+++ b/docs/assets/css/doctypes/fullwidthfrontpage.css
@@ -1,10 +1,12 @@
 /* Front page styling */
 
-/*Edge-to-edge grid for eg. slider*/
-
 .ku-branding .ku-branding-text {
   background: url('https://bootstrap.secure.ku.dk/img/ku_header_2_lin_dk.svg') 5px 66% no-repeat;
   background-size: 75%;
+  height: 100%;
+  width: 50%;
+  left: 70px;
+  bottom: 4px;
 }
 
 @media (min-width: 767px) {
@@ -12,6 +14,7 @@
     background: url('https://bootstrap.secure.ku.dk/img/ku_header.svg') left 72% no-repeat;
     background-size: contain;
     height: 70px;
+    left: 83px;
     width: 38%;
     bottom: 7px;
   }
@@ -22,7 +25,7 @@
   padding-bottom: 23px;
 }
 
-.breadcrumbs, .local-footer, ..navbar-inverse .topbar-logo {
+.breadcrumbs, .local-footer, .topbar-logo {
   display: none;
 }
 
