--- a/less/panels.less
+++ b/less/panels.less
@@ -347,8 +347,6 @@
     border: 0;
 
     .panel-title {
-      font-size: @font-size-large;
-      font-weight: 400;
       line-height: 20px;
 
       a {
@@ -362,9 +360,8 @@
           font-size: 12px;
           color: @gray-light;
           position: absolute;
-          top: 50%!important;
+          top: 12px;
           right: 7px;
-          transform: translateY(-50%);
           width: 20px;
           overflow: hidden;
         }
