--- a/less/variables.less
+++ b/less/variables.less
@@ -171,10 +171,10 @@
 @ku-branding-text-font-size: ceil((@font-size-base * 1.5)); //18px
 
 @font-size-h1:            floor((@font-size-base * 2)); // ~24px
-@font-size-h2:            floor((@font-size-base * 1.6)); // ~19px
-@font-size-h3:            ceil((@font-size-base * 1.34)); // ~16px
+@font-size-h2:            (@font-size-base * 1.7); // ~20.4px
+@font-size-h3:            (@font-size-base * 1.34); // ~16px
 @font-size-h4:            floor((@font-size-base * 1.2)); // ~14px
-@font-size-h5:            ceil((@font-size-base * 1.1)); // ~13px
+@font-size-h5:            floor((@font-size-base * 1.1)); // ~13px
 @font-size-h6:            @font-size-base;
 
 //** Unit-less `line-height` for use in components like buttons.
