--- a/less/mixins/ku-content-elements.less
+++ b/less/mixins/ku-content-elements.less
@@ -2,6 +2,7 @@
 // Used different places - added as mixins for easy maintainance
 
 .boxtop() {
+  align-self: flex-end;
   line-height: 1.25;
   letter-spacing: 0.6px;
   color: @panel-default-header-text;
