--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -261,6 +261,7 @@
         // Img inside the box adjusted by height and centered
         display: block;
         min-height: calc(100% + 1px);
+        min-width: calc(100% + 1px);
         @media (max-width: @screen-xs-min) {
           object-fit: cover;
         }
