--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -262,9 +262,9 @@
         display: block;
         min-height: calc(100% + 1px);
         min-width: calc(100% + 1px);
-        @media (max-width: @screen-xs-min) {
-          object-fit: cover;
-        }
+        // @media (max-width: @screen-xs-min) {
+        //   object-fit: cover;
+        // }
         -ms-interpolation-mode: bicubic;
         position: absolute;
         top: 50%;
