--- a/less/type.less
+++ b/less/type.less
@@ -315,6 +315,7 @@ abbr[data-original-title] {
 
 blockquote {
   // KU:
+  width: 100%;
   @media (min-width: @screen-sm-min) {
     width: 49%;
   }
