--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -35,7 +35,7 @@
 <link href="{{ site.baseurl }}/dist/css/faculties/faelles.css" rel="stylesheet">
 {% endif %}
 {% else %}
-<link rel="manifest" href="../manifest.json">
+<link rel="manifest" href="../../manifest.json">
 <link rel="apple-touch-icon" href="../../apple-touch-icon.png">
 <link rel="icon" href="../../images/favicons/favicon_fa.ico">
 <link href="../../dist/css/bootstrap.css" rel="stylesheet">
