--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -10,7 +10,7 @@
 {% if site.github %}
 <link rel="manifest" href="{{ site.baseurl }}/manifest.json">
 <link rel="apple-touch-icon" href="{{ site.baseurl }}/apple-touch-icon.png">
-<link rel="icon" href="{{ site.baseurl }}/favicon.ico">
+<link rel="icon" type="image/x-icon" href="{{ site.baseurl }}/favicon.ico">
 <link href="{{ site.baseurl }}/dist/css/bootstrap.min.css" rel="stylesheet">
 <link href="{{ site.baseurl }}/assets/css/mmenu/jquery.mmenu.css" rel="stylesheet">
 {% if page.slug == "examples" %}
@@ -37,7 +37,7 @@
 {% else %}
 <link rel="manifest" href="../../manifest.json">
 <link rel="apple-touch-icon" href="../../apple-touch-icon.png">
-<link rel="icon" href="../../images/favicons/favicon_fa.ico">
+<link rel="icon" type="image/x-icon" href="../../images/favicons/favicon_fa.ico">
 <link href="../../dist/css/bootstrap.css" rel="stylesheet">
 <link href="../../assets/css/mmenu/jquery.mmenu.css" rel="stylesheet">
 {% if page.slug != "examples" %}
