--- a/less/ku-footer.less
+++ b/less/ku-footer.less
@@ -5,7 +5,7 @@
 .local-footer {
   align-self: flex-end;
     @media (max-width: @screen-xs-max) {
-      padding: 0 13px;
+      padding: 0 @grid-gutter-by-half;
     }
 
   > .row {
