--- a/docs/_includes/components/thumbnails.html
+++ b/docs/_includes/components/thumbnails.html
@@ -55,6 +55,21 @@
       <figcaption class="figure-caption">A caption for the above image.</figcaption>
     </figure>
     {% endhighlight %}
+
+    <div class="bs-example" data-example-id="img-with-captions-aligned">
+      <p>Add <code>pull-left</code> or <code>pull-right</code> to the figure element to align the image.</p>
+      <figure class="image pull-right">
+        <img src="https://placehold.it/800x200" class="figure-img" alt="Right-aligned figure">
+        <figcaption class="figure-caption">Right-aligned figure</figcaption>
+      </figure>
+    </div>
+    {% highlight html %}
+    <figure class="image pull-right">
+      <img src="..." class="figure-img" alt="">
+      <figcaption class="figure-caption">Right-aligned figure.</figcaption>
+    </figure>
+    {% endhighlight %}
+
   <h2 id="thumbnails-custom-content">Custom content</h2>
   <p>With a bit of extra markup, it's possible to add any kind of HTML content like headings, paragraphs, or buttons into thumbnails.</p>
   <div class="bs-example" data-example-id="thumbnails-with-custom-content">
