--- a/docs/assets/css/src/docs.css
+++ b/docs/assets/css/src/docs.css
@@ -861,6 +861,7 @@ h1[id] {
   float: none;
   padding: 45px 15px 15px;
   margin: 0 -15px 15px;
+  overflow: hidden;
   clear: both;
   border-color: #e5e5e5 #eee #eee;
   border-style: solid;
