--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -45,7 +45,7 @@
     </div>
   </main>
     {% include global-footer.html %}
-    <script>
+    <!-- <script>
       $(function() {
         // Sticky left menu - only for Docs
         var $sidebar = $('.bs-docs-container #leftmenu'),
@@ -60,6 +60,6 @@
           }
         });
       });
-    </script>
+    </script> -->
   </body>
 </html>
