--- a/less/thumbnails.less
+++ b/less/thumbnails.less
@@ -48,7 +48,7 @@
   }
 
   &.pull-right {
-    margin-left: 5px;
+    margin-left: @margin10;
     @media (min-width: @screen-sm-min) {
       width: 45%;
     }
