--- a/docs/assets/css/src/docs.css
+++ b/docs/assets/css/src/docs.css
@@ -645,6 +645,7 @@ h1[id] {
 .bs-callout {
   padding: 20px;
   margin: 20px 0;
+  overflow: hidden;
   border: 1px solid #eee;
   border-left-width: 5px;
   border-radius: 3px;
