--- a/less/thumbnails.less
+++ b/less/thumbnails.less
@@ -20,9 +20,9 @@
     margin-right: auto;
   }
   // Add a hover state for linked versions only
-  a &:hover,
-  a&.active,
-  a&:focus {
+  a&:hover,
+  a&:focus,
+  a&.active {
     border-color: @link-color;
   }
   // Image captions
