--- a/docs/_includes/nav/components.html
+++ b/docs/_includes/nav/components.html
@@ -112,6 +112,7 @@
     <li><a href="#progress-stacked">Stacked</a></li>
   </ul>
 </li>
+<li><a href="#ku-entries">KU entry bar (indgange)</a></li>
 <li>
   <a href="#advanced-lists">KU advanced lists</a>
   <ul class="nav">
