--- a/less/panels.less
+++ b/less/panels.less
@@ -281,8 +281,8 @@
     overflow: hidden;
     font-weight: 600;
     padding: 0;
-    min-height: 57px;
-    display: flex;
+    // min-height: 57px;
+    // display: flex;
 
     & > .panel-title {
       .boxtop();
