--- a/less/ku-misc.less
+++ b/less/ku-misc.less
@@ -98,6 +98,13 @@ nav {
   }
 }
 
+
+.rightbox, .ingle-column .column1 {
+  blockquote {
+    width: 100%!important;
+  }
+}
+
 .divider {
   margin: @margin10 0;
   &:extend(.clearfix all);
@@ -238,7 +245,6 @@ nav {
   }
 }
 // Global scroll to top
-
 .scrolltop {
   position: fixed;
   bottom: 3%;
