--- a/less/scaffolding.less
+++ b/less/scaffolding.less
@@ -128,6 +128,9 @@ hr {
   margin-bottom: @line-height-computed;
   border: 0;
   border-top: 1px solid @hr-border;
+  // KU:
+  width: 100%;
+  float: left;
 }
 // Only display content to screen readers
 //
