--- a/less/ku-mobile-menu.less
+++ b/less/ku-mobile-menu.less
@@ -109,6 +109,9 @@
     }
 
     &.mm-opened {
+      a:not(.mm-next) {
+        font-weight: 700;
+      }
       .mm-listview {
         .mm-next {
           &::after {
