--- a/less/ku-mobile-menu.less
+++ b/less/ku-mobile-menu.less
@@ -177,9 +177,9 @@
     color: inherit;
   }
 
-  .mm-menu .navbar_mmenu {
+  .navbar_mmenu {
     &.mm-opened {
-      a:not(.mm-next) {
+      & > a:not(.mm-next) {
         font-weight: 700;
       }
     }
