--- a/less/ku-footer.less
+++ b/less/ku-footer.less
@@ -335,6 +335,9 @@
             background-color: @gray-666;
           }
         }
+        .footer-heading {
+          padding-left: 0;
+        }
       }
     }
   }
