--- a/less/ku-mobile-menu.less
+++ b/less/ku-mobile-menu.less
@@ -145,22 +145,18 @@
     border: none;
     box-shadow: none;
   }
-
   // Mmenu overrides
-
   .mm-panels {
     top: 45px!important;
   }
-
   // Use KU Arrows
-  .local1_mmenu,
-  .local2_mmenu {
+  .mm-listview > li {
     .mm-next {
       &::after {
         .icon;
         content: @icon-arrow;
+        color: @gray-dark;
         border: 0;
-        color: @white-color;
         transform: rotate(0);
         right: 20px;
       }
@@ -169,20 +165,33 @@
     &.mm-opened {
       .mm-next {
         &::after {
-          color: @white-color;
           transform: rotate(90deg);
-          right: 20px;
         }
       }
       // Sublevels
       .mm-listview {
         .mm-next {
           &::after {
-            color: @gray-dark;
-            transform: rotate(90deg);
-            right: 20px;
+            transform: rotate(0);
           }
         }
+
+        .mm-opened {
+          .mm-next {
+            &::after {
+              transform: rotate(90deg);
+            }
+          }
+        }
+      }
+    }
+  }
+
+  .local1_mmenu,
+  .local2_mmenu {
+    .mm-next {
+      &::after {
+        color: @white-color;
       }
     }
   }
